--- a/nextflow.config
+++ b/nextflow.config
@@ -13,8 +13,11 @@ profiles{
         executor.perJobMemLimit=true
         executor.exitReadTimeout='100000 sec'
         executor.pollInterval = '5sec'
-        conda.cacheDir = "$WORKFLOW_ROOT/cached_envs"
     } 
+}
+
+conda{
+    cacheDir = "$WORKFLOW_ROOT/cached_envs"
 }
 
 params{
