update monocle3 version

--- a/nextflow.config
+++ b/nextflow.config
@@ -28,8 +28,8 @@ params{
     training_dataset_id = "dummy"
     marker_genes = "$baseDir/data/markers_file.tsv"
     pval_col = "pvals"
-    groups_col = "groups"
-    gene_names = "names"
+    groups_col = "cluster"
+    gene_names = "genes"
     database = "org.Hs.eg.db"
     marker_gene_id_type = "ENSEMBL"
     classifier_gene_type = "ENSEMBL"
