--- a/nextflow.config
+++ b/nextflow.config
@@ -1,7 +1,9 @@
 profiles{
 
     standard {
-        process.executor = 'local'
+	process.executor = 'local'
+	conda.cacheDir = "$WORKFLOW_ROOT/cached_envs"
+        conda.createTimeout = "30 min"
     }
 
     cluster{
