--- a/nextflow.config
+++ b/nextflow.config
@@ -2,7 +2,7 @@ profiles{
 
     standard {
 	process.executor = 'local'
-	conda.cacheDir = "$WORKFLOW_ROOT/cached_envs"
+	//conda.cacheDir = "$WORKFLOW_ROOT/cached_envs"
         conda.createTimeout = "30 min"
     }
 
@@ -20,10 +20,6 @@ profiles{
         conda.createTimeout = "30 min"
         submitRateLimit = '1 / 15 s'
     } 
-}
-
-conda{
-    cacheDir = "$WORKFLOW_ROOT/cached_envs"
 }
 
 params{
