modify monocle env

--- a/envs/monocle3-cli.yaml
+++ b/envs/monocle3-cli.yaml
@@ -1,6 +1,7 @@
 name: monocle3-cli  
 dependencies: 
-  - monocle3-cli=0.0.9
+  - monocle3-cli=0.0.7
+  - r-monocle3=0.2.0
   - r-workflowscriptscommon
   - r-optparse
   - bioconductor-delayedarray=0.12.0
