--- a/envs/monocle3-cli.yaml
+++ b/envs/monocle3-cli.yaml
@@ -5,3 +5,4 @@ dependencies:
   - r-workflowscriptscommon
   - r-optparse
   - bioconductor-delayedarray=0.12.0
+  - bioconductor-singlecellexperiment=1.12.0
