--- a/envs/garnett-cli.yaml
+++ b/envs/garnett-cli.yaml
@@ -1,6 +1,6 @@
 name: garnett-cli  
 dependencies:
   - garnett-cli=0.0.5
-  - bioconductor-singlecellexperiment=1.8.0
+  - bioconductor-singlecellexperiment
   - bioconductor-org.Hs.eg.db
   - bioconductor-org.Mm.eg.db
